--- a/Wall_Street_English/html/styles/teachvideo.css
+++ b/Wall_Street_English/html/styles/teachvideo.css
@@ -9,7 +9,7 @@
 .maindetail-teachvideo .title .cn{color: #64cfe9; display: block}
 .maindetail-teachvideo .title .en{font-size: .8333em; line-height: 1.4em}
 
-.maindetail-teachvideo .detail .video{margin-top: 8em}
+.maindetail-teachvideo .detail .video{padding-top: 8em}
 
 .maindetail-teachvideo .exec{padding-top: 4em}
 
