--- a/Wall_Street_English/html/styles/classroom.css
+++ b/Wall_Street_English/html/styles/classroom.css
@@ -7,9 +7,11 @@
 .mainlist-classroom .ico-listen{background-position: -384px -224px}
 
 .maindetail-classroom{padding-top: 0}
-.maindetail-classroom .items li{font-size: 3.6em; line-height: 1.5em; padding: .6666em 9.722%; border-bottom: .0556em solid #d5d5d5; cursor: pointer}
+.maindetail-classroom .items li{font-size: 3.6em; line-height: 1.5em; padding: 0 9.722%; border-bottom: .0556em solid #d5d5d5; cursor: pointer}
 .maindetail-classroom .items li:hover{background-color: #f2f2f2}
+.maindetail-classroom .items li a {display: block; padding: .6666em 0; color: #666}
 .maindetail-classroom .items li.current{background-color: #64cfe9; color: #fff}
+.maindetail-classroom .items li.current a {color: #fff}
 .maindetail-classroom .items li .tit{float: left}
 .maindetail-classroom .items li .pointer{float: right}
 .maindetail-classroom .items li .pointer .ico-pointer{width: 24px; height: 24px; background-position: -120px -24px}
