--- a/Wall_Street_English/html/styles/common.css
+++ b/Wall_Street_English/html/styles/common.css
@@ -9,7 +9,7 @@ canvas,object,embed,progress,audio,video,track,map,area,figure,figcaption,
 table,caption,tbody,tfoot,thead,tr,th,td,
 span,a,b,strong,em,mark,blockquote,code,del,abbr,dfn,big,small,time,i,acronym,address,cite,ins,kbd,q,samp,sub,sup,tt,var{margin:0; padding:0; border:none; font: inherit}
 
-body{font-size:62.5%; line-height: 1.5em; letter-spacing:0; font-family:"微软雅黑", "Arial", "Helvetica", "sans-serif"; background:#003359; color:#777; colorcursor:default; vertical-align:baseline}
+body{font-size:62.5%; line-height: 1.5em; letter-spacing:0; font-family:"微软雅黑", "Arial", "Helvetica", "sans-serif"; background:#003359; color:#777; cursor:default; vertical-align:baseline}
 
 :hover{transition-duration:.3s; transition-timing-function:ease; transition-property:color, border-color, background-color}
 
@@ -197,7 +197,7 @@ label input{vertical-align:middle; cursor:pointer}
 .maindetail .options li:hover{background-color: #f2f2f2}
 .maindetail .options label{cursor: pointer; display: block; padding: .625em 0; color: #64cfe9}
 .maindetail .exec{padding: 7em 9.722% 3em 9.722%; text-align: center}
-.maindetail .exec .btn{width: 35%; margin: 0 5%}
+.maindetail .exec .btn{width: 35%; margin: 0 5%; color: #fff}
 .maindetail .exec .btn .ico{margin: 0 5.862% 0 3.1034%}
 .maindetail .exec .btn-prev .ico{background-position: -96px 0; margin: 0 7.5% 0 -7.5%}
 .maindetail .exec .btn-next .ico{background-position: -120px -24px; margin: 0 -7.5% 0 7.5%}
