--- a/Wall_Street_English/html/styles/common.css
+++ b/Wall_Street_English/html/styles/common.css
@@ -76,7 +76,7 @@ label input{vertical-align:middle; cursor:pointer}
 .colorRed{color: #f12c3e!important}
 .colorBlue{color:#64cfe9!important}
 .colorGray{color:#777!important}
-.colorGreen{color:#67ae51!important}
+.colorDeepBlue{color:#003359!important}
 
 /*crumbs*/
 .nav-crumbs{padding:0 2px; border-bottom:1px solid #90b830; line-height:18px}
