--- a/mioxu_site/html/styles/common.css
+++ b/mioxu_site/html/styles/common.css
@@ -13,7 +13,7 @@ html{height:100%; overflow: hidden}
 body{font-size:62.5%; line-height: 1.5em; letter-spacing:0; font-family:"微软雅黑", "Arial", "Helvetica", "sans-serif"; background:#f3f3f3; color:#8c8680; cursor:default; vertical-align:baseline; height:100%}
 
 .layout-header div,
-.layout-main div{transition-duration:.3s; transition-timing-function:ease; transition-property:all}
+.layout-main div{transition-duration:.15s; transition-timing-function:ease; transition-property:all}
 
 h1{font-size:3.2em}
 h2{font-size:2.4em}
@@ -133,6 +133,15 @@ label input{vertical-align:middle; cursor:pointer}
 .contents-portfolio .nav .btn-next {margin-left: 6px}
 .contents-portfolio .nav .btn-next .ico{background-position:-128px 0}
 
+.contents-illustration{margin:7% 10%}
+.contents-illustration .title{font-size: 1.6em; line-height: 2em}
+.contents-illustration .content {margin: 3.3333em 0 2em 0}
+.contents-illustration .content img{width: 100%}
+.contents-illustration .items{bottom: 0; left: 0; text-align: center; font-size: 0}
+.contents-illustration .items a{margin:0 6px 6px 0; display: inline-block; width: 50px; height: 50px; line-height: 50px; overflow: hidden; padding: 2px; border: 1px solid #ddd; background: #fff}
+.contents-illustration .items a:hover{border-color:#8c8680}
+.contents-illustration .items img{max-width: 50px; max-height: 50px}
+
 
 /**********footer**********/
 .layout-footer{position:absolute; width:100%; bottom:0; left:0; text-align:center}
@@ -159,6 +168,7 @@ label input{vertical-align:middle; cursor:pointer}
 .rsp-lte-w640 .layout-main{margin-left:0; height:auto}
 .rsp-lte-w640 .layout-main .container{height:auto}
 .rsp-lte-w640 .contents-portfolio {padding:0 32px}
+.rsp-lte-w640 .contents-illustration {}
 
 .rsp-lte-w640 .layout-footer{position:static; width:auto; background:#fff; margin-top:0!important}
 .rsp-lte-w640 .layout-footer .container{padding:2.3333em 2em}
